--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -3,6 +3,8 @@ name: Docker
 on:
   push:
     branches: [ main ]
+  schedule:
+   - cron: '0 21 * * *'
   # pull_request:
   #   branches: [ main ]
 
