--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -25,17 +25,10 @@ jobs:
 
     - name: Check out code
       uses: actions/checkout@v2
-
+      
     - name: Build and push image to ACR EE
       run: |
         docker login -u $ALIYUN_REGISTRY_USER -p $ALIYUN_REGISTRY_PASSWORD $REGISTRY
         sh pull.sh
-        data=`cat trigger.txt`
-
-        if [ $MM_NOTIFY_URL ];then
-          curl  -H 'Content-Type: application/json' \
-            -d "{\"msgtype\": \"text\",\"text\": {\"content\":\"同步成功 $data \"}}" \
-            $MM_NOTIFY_URL
-        else
-          echo 'MM_NOTIFY_URL not set'
-        fi
+        cat trigger.txt
+        curl -d '@trigger.txt' $MM_NOTIFY_URL
